TestSuite/Verification/Error/Parallel/Correctness/On-Device/Intra-Region/CPU/out/includes/DPNestedTest.hxx

/*********************************************************************/
/*        This is a generated C++ Header file.                       */
/*        Generated by PatternDSL.                                   */
/*        Contains the function declarations for the source file     */
/*********************************************************************/

#ifndef DPNestedTest_HXX
#define DPNestedTest_HXX

uint randomizer(int n = 42) {
    srand(n);
    return rand();
}



#endif